--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Git hub !!</h1>
-    <h2>hello how are you ??</h2>
-    <h3>hello gitsss</h3>
+   <h1>this is feature 2</h1>
 </body>
 </html>
